--- a/views/explore.ejs
+++ b/views/explore.ejs
@@ -8,10 +8,10 @@
 </head>
 <body>
   <div class="container">
-    <h2 style="padding-top: 2rem;">반 선택</h2>
+    <h2 style="padding-top: 2rem;">Explore</h2>
     <div class="grid">
       <% classes.forEach((data) => { %>
-      <div class="card"><div class="label"><%= data.class_id %></div><div class="sub"><%= data.total_count %>장</div></div>
+      <div class="card"><div class="label"><%= data.class_id %></div><div class="sub"><%= data.total_count %> up</div></div>
       <% }) %>
     </div>
   </div>
