--- a/public/css/login.css
+++ b/public/css/login.css
@@ -10,13 +10,23 @@ body {
 
 .logo-box {
   width: 100%;
-  height: 60%;
+  height: 70%;
   background-color: #e7f0ff;
   display: flex;
   justify-content: center;
   align-items: center;
   box-sizing: border-box;
-  
+  border-radius: 32px; /* 모서리 둥글게 */
+  overflow: hidden;    /* 이미지가 넘치지 않게 */
+}
+
+.logo-box img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;   /* div에 꽉 차게 */
+  display: block;
+  margin: 0;
+  border-radius: 32px; /* 이미지도 둥글게 */
 }
 
 .container {
@@ -109,6 +119,6 @@ a:hover {
     font-size: 22px;
   }
   .logo-box {
-    height: 35vh;
+    height: 45vh;
   }
 }
