--- a/public/css/gallery.css
+++ b/public/css/gallery.css
@@ -49,6 +49,10 @@ body {
     background-color: #fff;
     display: flex;
     justify-content: center;
+    -webkit-user-select:none;
+    -moz-user-select:none;
+    -ms-user-select:none;
+    user-select:none
 }
 
 .container {
