--- a/public/css/bottom_nav.css
+++ b/public/css/bottom_nav.css
@@ -9,7 +9,12 @@
     padding-bottom: 12px;
     border-top: 1px solid #ddd;
     overflow: visible;
-    z-index: 1000;
+    z-index: 800;
+    -webkit-user-select:none;
+    -moz-user-select:none;
+    -ms-user-select:none;
+    user-select:none
+    
   }
   .nav-item {
     flex: 1;
