--- a/public/css/login.css
+++ b/public/css/login.css
@@ -6,6 +6,10 @@ body {
   display: flex;
   flex-direction: column;
   height: 100vh;
+  -webkit-user-select:none;
+  -moz-user-select:none;
+  -ms-user-select:none;
+  user-select:none
 }
 
 .logo-box {
