--- a/views/post.ejs
+++ b/views/post.ejs
@@ -35,7 +35,7 @@
 
     <!-- Post 버튼 -->
     <button class="post-btn">post</button>
-    <p>*행사 시작(7/29 화) 이전에 업로드된 게시물은 결과에 반영되지 않으며, 삭제될 수 있습니다</p>
+    <p>* 플래너가 아닌 이미지는 결과에 반영되지 않으며, 삭제 및 이용 제한 조치가 취해질 수 있습니다</p>
   </div>
 
   <!-- 하단 네비 -->
