--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -10,7 +10,7 @@
   <div class="container">
     <!-- 프로필 -->
     <div class="profile-section">
-      <div class="title" style="margin-top: 2rem;">마이 페이지</div>
+      <div class="title" style="margin-top: 2rem;">Profile</div>
       <div class="class"><span id="student-class"><%= `${student_id[0]}-${Number(student_id.substring(1, 3))}` %></span></div>
       <div class="id-label">
         <strong style="font-size: 1.1rem;"><span id="username"><%= username %></span></strong>
