--- a/views/gallery.ejs
+++ b/views/gallery.ejs
@@ -13,7 +13,7 @@
       <button class="back-btn" onclick="history.back()">
         <img src="/images/post/back_icon.png" alt="뒤로가기">
       </button>
-      <h2 style="font-weight: 800;"><%= classId %></h2>
+      <h2><%= classId %></h2>
     </div>
 
     <!-- 갤러리 그리드 -->
