--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -16,7 +16,7 @@
         <strong style="font-size: 1.1rem;"><span id="username"><%= username %></span></strong>
         <br><span id="student-id"><%= student_id %></span>
       </div>
-      <button class="logout-btn" onclick="location.href='/logout'">Log out</button>
+      <button class="logout-btn" onclick="location.href='/logout'">로그아웃</button>
 
     </div>
 
