--- a/public/css/explore.css
+++ b/public/css/explore.css
@@ -24,11 +24,13 @@ body {
 }
 
 h2 {
-    font-size: 1.25rem;
-    font-weight: 600;
+    font-size: 1.5rem;
+    font-weight: 700;
     text-align: center;
     margin-bottom: 1rem;
-    color: #444;
+    color: #000;
+    margin-top: 0;
+    
 }
 
 .grid {
