--- a/public/css/post.css
+++ b/public/css/post.css
@@ -26,6 +26,18 @@ body {
     padding-bottom: 6rem;
 }
 
+p {
+    font-size: 0.7rem;
+    color: #777;
+    font-weight: 500;
+
+}
+
+.al {
+    justify-self: center;
+    width: 80%;
+}
+
 /* 헤더 */
 .header {
     position: relative;
@@ -34,7 +46,7 @@ body {
     justify-content: center;
     /* 위쪽 여백 추가 */
     padding-top: 2rem;
-    padding-bottom: 2rem;
+    padding-bottom: 1rem;
     height: 2.5rem;
     margin-bottom: 1rem;
 }
@@ -57,7 +69,6 @@ body {
 .header h2 {
     margin: 0;
     font-size: 1.25rem;
-    /* 볼드체로 변경 */
     font-weight: 700;
     color: #000;
 }
@@ -121,7 +132,7 @@ input::-webkit-inner-spin-button {
 .time-inputs img {
     width: 1.5rem;
     height: auto;
-    margin-right: .5rem;
+    margin-right: 0.5rem;
 }
 
 .time-inputs .time-num {
@@ -151,6 +162,7 @@ input::-webkit-inner-spin-button {
 
 /* 내용 입력 */
 textarea {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
     width: 80%;
     min-height: 6rem;
     padding: .75rem 1rem;
