--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -29,28 +29,33 @@ body {
 }
 
 .profile-section .title {
-    font-size: 1rem;
-    font-weight: 500;
-    color: #444;
+    font-size: 1.5rem;
+    font-weight: 700;
+    color: #000;
     margin-bottom: .5rem;
 }
 
 .profile-section .class {
-    font-size: 2rem;
-    font-weight: 700;
+    font-size: 1.75rem;
+    font-weight: 500;
     color: #000;
     margin-bottom: .25rem;
 }
 
 .profile-section .id-label {
     font-size: 1rem;
-    color: #444;
+    color: #000;
     line-height: 1.4;
 }
 
 .profile-section .id-label strong {
     font-weight: 700;
     color: #000;
+}
+
+#student-id {
+    font-weight: 500;
+    color: #777;
 }
 
 .divider {
@@ -115,6 +120,7 @@ body {
     cursor: pointer;
     font-size: 1rem;
     margin-top: 1rem;
+    font-weight: 580;
 }
 @media screen and (max-width: 480px) {
     :root {
