--- a/views/post.ejs
+++ b/views/post.ejs
@@ -35,7 +35,9 @@
 
     <!-- Post 버튼 -->
     <button class="post-btn">post</button>
-    <p>* 플래너가 아닌 이미지는 결과에 반영되지 않으며, 삭제 및 이용 제한 조치가 취해질 수 있습니다</p>
+    <div class="al">
+      <p>* 플래너가 아닌 이미지는 결과에 반영되지 않으며, 부적절한 이미지 게시 시 계정 삭제 및 이용 제한 조치가 취해질 수 있습니다.</p>
+    </div>
   </div>
 
   <!-- 하단 네비 -->
