--- a/views/post.ejs
+++ b/views/post.ejs
@@ -37,6 +37,7 @@
     <button class="post-btn">post</button>
     <div class="al">
       <p>* 플래너가 아닌 이미지는 결과에 반영되지 않으며, 부적절한 이미지 게시 시 계정 삭제 및 이용 제한 조치가 취해질 수 있습니다.</p>
+      <p>* 플래너 업로드는 매일 오전 9시부터 가능합니다.</p>
     </div>
   </div>
 
