중복 업로드 문제 해결 + 시간 해결

--- a/views/leaderboard.ejs
+++ b/views/leaderboard.ejs
@@ -109,7 +109,7 @@
   <!-- 이미지 확대 -->
   <%- include('partials/image_modal') %>
 
-  <script> document.getElementById('profile').className += ' active' </script>
+  <script> document.getElementById('explore').className += ' active' </script>
   <script src="/js/image_modal.js"></script>
 </body>
 </html>
