--- a/views/post.ejs
+++ b/views/post.ejs
@@ -13,33 +13,34 @@
       <h2 style="font-size: 1.5rem; ">Post</h2>
     </div>
 
-    <!-- 이미지 업로드 -->
-    <div class="upload-area">
-      <img src="images/post/upload_image.png" alt="click to upload">
-      <input type="file" accept="image/*">
-    </div>
+    <h1 style="display: flex; justify-content: center; align-items: center;"> 해당 행사는 종료되었습니다.</h1>
+      <!-- 이미지 업로드 -->
+      <!-- <div class="upload-area">
+        <img src="images/post/upload_image.png" alt="click to upload">
+        <input type="file" accept="image/*">
+      </div> -->
 
-    <!-- 총 공부시간 -->
-    <div class="study-time">
-      <div class="label">오늘의 총 공부시간</div>
-      <div class="time-inputs">
-        <img src="images/post/clock_icon.png" alt="clock icon">
-        <input class="time-num" type="number" min="0" max="23" placeholder="0"><span class="time-unit">H</span>
-        <input class="time-num" type="number" min="0" max="59" placeholder="0"><span class="time-unit">M</span>
-        <input class="time-num" type="number" min="0" max="59" placeholder="0"><span class="time-unit">S</span>
+      <!-- 총 공부시간 -->
+      <!-- <div class="study-time">
+        <div class="label">오늘의 총 공부시간</div>
+        <div class="time-inputs">
+          <img src="images/post/clock_icon.png" alt="clock icon">
+          <input class="time-num" type="number" min="0" max="23" placeholder="0"><span class="time-unit">H</span>
+          <input class="time-num" type="number" min="0" max="59" placeholder="0"><span class="time-unit">M</span>
+          <input class="time-num" type="number" min="0" max="59" placeholder="0"><span class="time-unit">S</span>
+        </div>
+      </div> -->
+
+      <!-- 내용 입력 -->
+      <!-- <textarea placeholder="내용을 입력하세요."></textarea> -->
+
+      <!-- Post 버튼 -->
+      <!-- <button class="post-btn">post</button>
+      <div class="al">
+        <p>* 플래너가 아닌 이미지는 결과에 반영되지 않으며, 부적절한 이미지 게시 시 계정 삭제 및 이용 제한 조치가 취해질 수 있습니다.</p>
+        <p>* 플래너 업로드는 매일 오전 9시부터 가능합니다.</p>
       </div>
-    </div>
-
-    <!-- 내용 입력 -->
-    <textarea placeholder="내용을 입력하세요."></textarea>
-
-    <!-- Post 버튼 -->
-    <button class="post-btn">post</button>
-    <div class="al">
-      <p>* 플래너가 아닌 이미지는 결과에 반영되지 않으며, 부적절한 이미지 게시 시 계정 삭제 및 이용 제한 조치가 취해질 수 있습니다.</p>
-      <p>* 플래너 업로드는 매일 오전 9시부터 가능합니다.</p>
-    </div>
-  </div>
+    </div> -->
 
   <!-- 하단 네비 -->
   <%- include('partials/bottom_nav') %>
